test/testdata/classes/methods/static/missing_3_args_error.lox
class Foo {
  static add(a, b, c) {
    print a + b + c;
  }
}

Foo.add(); // error: Foo.add() accepts 3 arguments but 0 were given
